# x4-production-planner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
libx4productionplanner/: Cargo.toml
libx4productionplanner/src/: config.rs  dataloader.rs  i18n.rs  lib.rs  main.rs
x4pp-web-ui/: Cargo.toml
